--- a/CenaPlus.Cloud.Web/test.html
+++ b/CenaPlus.Cloud.Web/test.html
@@ -6,8 +6,8 @@
     <title></title>
 </head>
 <body>
-    <form action="/Ajax/Register.SendMail.aspx" method="post">
-        <input type="text" name="Email" />
+    <form action="/Ajax/Contests.GetList.aspx" method="post">
+        <input type="text" name="Page" />
         <input type="submit" />
     </form>
 </body>
